# sunlight

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  doxygen.yml  release.yml
cmake/: sunlightConfig.cmake.in
doc/: DEPENDENCIES.txt  FIXME.txt  HEADER.txt  MISSING_FEATURES.md  README-DEBUG.txt  TODO.txt
doc/vscode/: README.md
doc/vscode/.vscode_sample/: extensions.json  launch.json  settings.json  settings.macos.json  settings.windows.json  tasks.json
doc/vscode/json/: launch.json
samples/: .gitignore
samples/collision/: CMakeLists.txt  world.cpp  world.h
samples/collision/docs/: README.md
samples/gamepad/: CMakeLists.txt  world.cpp  world.h
samples/gamepad/docs/: README.md
samples/gamepad/resources/map/: tileset_clouds.tsx
samples/maprenderer/: CMakeLists.txt  maprenderer_test.cpp  maprenderer_test.h
samples/resources/map/: Cloud_Map.tmx  Tileset_Clouds.tsx  Tileset_Clouds_variant.tsx  Tileset_House.tsx  Tileset_OpenCloud.tsx  Tileset_Sky.tsx  cloud_map.tmx  error.tmx  tileset_house.tsx  tileset_open_cloud.tsx
samples/scriptprocessor/: CMakeLists.txt  scriptprocessor_test.cpp  world.cpp  world.h
samples/scriptprocessor/docs/: README.md
samples/scriptprocessor/resources/map/: tileset_cloud_soil.tsx  tileset_sky.tsx
samples/sprite/: CMakeLists.txt  sprite_test.cpp  world.cpp  world.h
samples/sprite/docs/: README.md
samples/sprite/resources/map/: cloud_map.tmx.old  test.tmx
samples/tilemaprenderer/: CMakeLists.txt  tilemaprenderer_test.cpp  tilemaprenderer_test.h  world.cpp  world.h
samples/tilemaprenderer/docs/: README.md
samples/tilemaprenderer/resources/map/: cloud_map.tmx  error.tmx  test.tmx  tileset_clouds_variant.tsx  tileset_house.tsx  tileset_house_var1.tsx  tileset_monke_variants.tsx
src/: CMakeLists.txt
src/base/: baseentity.h  graphicobject.cpp  graphicobject.h  object.cpp  primitives.h  viewport.cpp  viewport.h
src/canvas/: basecanvas.cpp  basecanvas.h  canvas.cpp  canvas.h  drawcanvas.cpp  texturecanvas.cpp  texturecanvas.h
src/collision/: collider.h  collisionmanager.cpp  collisionmanager.h  icollisionlistener.h
src/concurrent/: timer.h
src/engines/: enginefactory.cpp  enginefactory.h  iengine.h
src/engines/raylib/: raylibengine.cpp  raylibengine.h
src/general/: helper.cpp  helper.h
src/include/base/: baseentity.h  color.h  object.h  viewport.h
src/include/canvas/: basecanvas.h  canvas.h  drawcanvas.h  texturecanvas.h
src/include/collision/: collider.h  collisionmanager.h  icollisionlistener.h  icollisionmanager.h
src/include/concurrent/: timer.h
src/include/engines/raylib/: raylibengine.h
src/include/input/: iinputhandler.h  inputhandlerfactory.h
src/include/input/raylib/: raylibinputhandler.h
src/include/renderer/: maprenderer.h
src/include/scripting/: iscriptlistener.h  scriptprocessor.h
src/include/sound/: isound.h  soundmanager.h
src/include/sound/raylib/: raylibsound.h
src/include/sprite/: sprite.h  texturemap.h
src/include/tilemap/: itilemap.h  itilemaplistener.h  tilemapdefs.h
src/input/: iinputhandler.h  inputhandlerfactory.h  inputhandlrfactory.cpp
src/input/raylib/: raylibinputhandler.cpp  raylibinputhandler.h
src/renderer/: maprenderer.cpp  tilemaprenderer.cpp  tilemaprenderer.h
src/scripting/: iscriptlistener.h  scriptprocessor.cpp  scriptprocessor.h
src/sound/: soundfactory.cpp  soundfactory.h  soundmanager.cpp  soundmanager.h
src/sound/raylib/: raylibsound.cpp
src/source/base/: baseentity.cpp  object.cpp  viewport.cpp
src/source/canvas/: basecanvas.cpp  canvas.cpp  drawcanvas.cpp  texturecanvas.cpp
src/source/collision/: collider.cpp  collisionmanager.cpp
src/source/concurrent/: timer.cpp
src/source/engines/raylib/: raylibengine.cpp
src/source/input/: inputhandlrfactory.cpp
src/source/input/raylib/: raylibinputhandler.cpp
src/source/renderer/: maprenderer.cpp
src/source/scripting/: scriptprocessor.cpp
src/source/sound/: soundmanager.cpp
src/source/sound/raylib/: raylibsound.cpp
src/source/sprite/: sprite.cpp  texturemap.cpp
src/sprite/: sprite.cpp  sprite.h  texturemap.cpp  texturemap.h
src/tilemap/: itilemap.h
tests/: CMakeLists.txt  mock_engine.h  mock_sound.h  mock_tilemap.h  test_collider.cpp  test_collisionmanager.cpp  test_helper.cpp  test_main.cpp  test_primitives.cpp  test_scriptprocessor.cpp  test_soundmanager.cpp  test_sprite.cpp  test_texturecanvas.cpp  test_tilemaprenderer.cpp  test_viewport.cpp
